jilles      2006/08/20 14:08:59 UTC	(20060820-6167)
  Log:
  Add operserv rwatch, a list of regular expressions all
  connecting clients are matched against. Matching clients
  are described in the snoop channel and/or klined.
  All subcommands require user:auspex privilege, enabling or
  disabling klines additionally requires operserv:massakill.
  All changes are snooped, changes to kline are also sent over
  wallops. There is also full logging.
  Loading this module (as well as clones) with /os modload
  may cause strange errors about loading other modules,
  I will fix this later.
  

  Changes:	Modified:
  +1 -0		trunk/modules/operserv/Makefile.in (File Modified) 
  +465 -0	trunk/modules/operserv/rwatch.c (File Added) 


jilles      2006/08/20 13:35:26 UTC	(20060820-6165)
  Log:
  operserv clones:
  - don't add full-fledged akills, just add klines to the servers
  - log each added kline at INFO level
  

  Changes:	Modified:
  +3 -5		trunk/modules/operserv/clones.c (File Modified) 


jilles      2006/08/20 13:22:45 UTC	(20060820-6163)
  Log:
  Only show IPs with >= 4 clients in clones list.
  

  Changes:	Modified:
  +1 -1		trunk/modules/operserv/clones.c (File Modified) 


jilles      2006/08/20 00:19:27 UTC	(20060820-6161)
  Log:
  regex_extract():
  - fix backslash handling like it should be (e.g. accept /\//)
  - be more strict in what to allow after the RE (e.g. deny /aaa/.)
  

  Changes:	Modified:
  +6 -3		trunk/src/match.c (File Modified) 


jilles      2006/08/19 23:27:19 UTC	(20060819-6159)
  Log:
  Change syntax for operserv rmatch and rakill, to cope
  with regular expressions and reasons both containing
  spaces.
  This uses a new function in match.c
  char *regex_extract(char *pattern, char **pend, int *pflags);
  returns the extracted RE (overwriting a character in pattern
  with '\0')
  

  Changes:	Modified:
  +5 -7		trunk/help/oservice/rakill (File Modified) 
  +9 -6		trunk/help/oservice/rmatch (File Modified) 